--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     /*position: fixed;*/
     overflow: hidden;
 }
+
 .header {
     margin: 0px;
     padding: 20px;
@@ -72,4 +73,46 @@ li > svg {
     float: left;
     margin: 30px;
     font-size: 29px;
+}
+.icons {
+  /*margin: 100px auto;*/
+  height: 0px;
+  text-align: center;
+  float: left;
+  margin-left: 40px;
+}
+
+.icon {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  margin: 5px;
+  border-radius: 50%;
+
+  -webkit-transition: opacity .25s ease-in-out;
+
+  background-size: 60%;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+.icon:hover {
+  opacity: 0.6;
+  -webkit-animation: rotate 1s;
+  animation: rotate 1s;
+}
+@-webkit-keyframes rotate {
+    100% {-webkit-transform: rotate(360deg); -ms-transform: rotate(360deg);}
+}
+@keyframes rotate {
+    100% {-webkit-transform: rotate(360deg); -ms-transform: rotate(360deg);}
+}
+.icon-m {
+  background-image: url("mail.png");
+  background-color: #333A56;
+}
+.icon-gh {
+  background-image: url("github.png");
+  background-color: #333A56;
 }
